As a user I want to be able to see my accounts overview/data [Delivers #179841264]
